--- a/base-parent/pom.xml
+++ b/base-parent/pom.xml
@@ -45,5 +45,6 @@
 		<module>base-simple-consumer</module>
 		<module>base-simple-provider</module>
 		<module>base-discovery-eureka</module>
+		<module>base-oauth2</module>
 	</modules>
 </project>
